updating gradle files